--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
       "@/*": ["./*"],
       "@components/*": ["./components/*"],
       "@content/*": ["./content/*"],
-      "@pages/*": ["./pages/*"]
+      "@pages/*": ["./pages/*"],
+      "@public/*": ["./public/*"]
     }
   }
 }
