--- a/.github/workflows/publish-to-pages.yaml
+++ b/.github/workflows/publish-to-pages.yaml
@@ -82,7 +82,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    steps:
-      - name: Deploy to GitHub Pages 🚀
-        id: deployment
-        uses: actions/deploy-pages@v1
+    # steps:
+    #   - name: Deploy to GitHub Pages 🚀
+    #     id: deployment
+    #     uses: actions/deploy-pages@v1
