--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "next-portfolio",
+  "name": "janiidu-portfolio",
+  "homepage": "https://janiidu.me",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "@next/bundle-analyzer": "^13.4.3",
     "@sendgrid/mail": "^7.7.0",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
